# rh-stream-overlays

./: .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  LICENSE  Makefile  README.md  install.sh  mkdocs.yml  pyproject.toml  vercel.json
.github/: renovate.json
.github/workflows/: deploy.yaml  labels.yaml  linting.yaml  release-drafter.yaml  release.yaml  rhfest.yaml  sync-labels.yaml
custom_plugins/stream_overlays/: __init__.py  const.py  manifest.json  trackdraw.py  utils.py
docs/: index.md
docs/advanced/: index.md
docs/assets/css/: homepage.css  styles.css
docs/assets/js/: site.js
docs/blog/: .authors.yml  index.md
docs/blog/posts/: release-v1.1.0.md  release-v1.4.0.md  release-v1.5.0.md
docs/contributing/: adding-overlays.md
docs/faq/: customization.md  index.md  installation.md  obs-setup.md  troubleshooting.md
docs/getting-started/: index.md  installation.md  obs-setup.md
docs/installation/: development.md  index.md  obs_setup.md
docs/integrations/: index.md
docs/integrations/trackdraw/: index.md  live-race-map.md  overview.md  setup.md
docs/overlays/: apex.md  dds.md  index.md  lcdr.md
docs/overlays/types/: index.md  leaderboards.md  nodes.md  topbars.md  upcoming-heat.md
docs/production/: obs-scene-layouts.md  performance.md  race-day-checklist.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/components/: ConnectionWarning.tsx
frontend/src/core/: normalizers.ts  overlayRuntime.ts  primitives.ts  raceStore.ts  resultDataSelectors.ts  rotorhazardSocket.ts  rotorhazardTypes.ts  timing.ts
frontend/src/dev/: OverlayLauncher.tsx  overlayLauncher.css
frontend/src/themes/: apex.ts  dds.ts  lcdr.ts  types.ts
frontend/src/types/: node-url.d.ts
plans/: preact-migration-pva.md
preact/: index.html  package-lock.json  tsconfig.json  vite.config.ts
preact/src/components/: ConnectionWarning.tsx
preact/src/core/: formatting.ts  normalizers.ts  overlayRuntime.ts  primitives.ts  raceStore.ts  resultDataSelectors.ts  rotorhazardSocket.ts  rotorhazardTimer.ts  timing.ts
preact/src/dev/: OverlayLauncher.tsx
preact/src/overlays/: PreactTestOverlay.tsx  preact-test.css  preact-test.entry.tsx
preact/src/themes/: apex.ts  dds.ts  lcdr.ts
stream_overlays/: README.md  __init__.py  manifest.json  utils.py
stream_overlays/static/css/: overlay_node_dds.css  overlay_node_lcdr.css  stream_topbar_1.css  stream_topbar_dds.css  stream_topbar_lcdr.css
stream_overlays/static/js/: overlay_node_dds.js  overlay_node_lcdr.js  (+2 more)
tools/: install.sh
(+128 files in other folders)
