[project]
name = "stream-overlays"
version = "0.0.0"
description = "A RotorHazard plugin with collection of stream overlays to use with OBS Studio or similar software."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pre-commit==4.4.0",
  "pre-commit-hooks==6.0.0",
  "ruff==0.14.5",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.5",
]

[tool.ruff]
target-version = "py311"
lint.select = ["ALL"]
lint.ignore = [
  "ANN401",  # Opinioated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
  "SLOT000", # Has a bug with enums: https://github.com/astral-sh/ruff/issues/5748

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]
